--- a/.github/workflows/e2e-olm.yaml
+++ b/.github/workflows/e2e-olm.yaml
@@ -49,13 +49,14 @@ jobs:
           operator-sdk olm install
           kubectl create ns mondoo-operator
           operator-sdk run bundle '${{ inputs.bundle-img }}' --namespace mondoo-operator
-          kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.yaml
+          echo ${{ secrets.MONDOO_CLIENT }} > creds.json
+          kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
+          rm creds.json
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Install mondoo and run e2e test with olm
         run: |
           curl -sSL http://mondoo.io/download.sh | bash
           mv mondoo /usr/local/bin/ 
-          echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
           make test/deployment
       - name: Clean up
         run: |
