--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |
           make deploy
           echo ${{ secrets.MONDOO_CLIENT }} > creds.json
-          kubectl create secret generic mondoo-client --namespace mondoo-operator --from-literal=config=${{ secrets.MONDOO_CLIENT }}
+          kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
           rm creds.json
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify Mondoo Operator kustomize manifests
