--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -2,6 +2,8 @@ name: E2E Tests
 on:
   pull_request:
   push:
+    paths-ignore:
+      - 'docs/**'
     branches:
       - "main"
     tags: ["v*.*.*"]
