--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -2,6 +2,8 @@ name: Unit Tests
 on:
   pull_request:
   push:
+    paths-ignore:
+      - 'docs/**'
     branches:
       - "main"
     tags: ["v*.*.*"]
