--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -3,7 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      - "main"
+      - "debug-creds"
     tags: ["v*.*.*"]
 
 jobs:
@@ -18,22 +18,23 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
-      - name: Start minikube
-        uses: medyagh/setup-minikube@master
-      - name: Try the cluster !
-        run: kubectl get pods -A
-      - name: Build image
-        run: |
-          export SHELL=/bin/bash
-          eval $(minikube -p minikube docker-env)
-          make docker-build
+      # - name: Start minikube
+      #   uses: medyagh/setup-minikube@master
+      # - name: Try the cluster !
+      #   run: kubectl get pods -A
+      # - name: Build image
+      #   run: |
+      #     export SHELL=/bin/bash
+      #     eval $(minikube -p minikube docker-env)
+      #     make docker-build
       - name: Deploy to minikube
         run: |
-          make deploy
+          # make deploy
           echo ${{ secrets.MONDOO_CLIENT }} > creds.json
           kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
           rm creds.json
-          kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+          kubectl get secret mondoo-client -n mondoo-operator -o yaml
+          # kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify Mondoo Operator kustomize manifests
         run: |
           kubectl wait --for=condition=Ready pod -l control-plane=controller-manager --namespace mondoo-operator 
