--- a/.github/workflows/e2e-olm.yaml
+++ b/.github/workflows/e2e-olm.yaml
@@ -49,7 +49,7 @@ jobs:
           operator-sdk olm install
           kubectl create ns mondoo-operator
           operator-sdk run bundle '${{ inputs.bundle-img }}' --namespace mondoo-operator
-          echo ${{ secrets.MONDOO_CLIENT }} > creds.json
+          echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
           kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
           rm creds.json
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
