--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -30,9 +30,10 @@ jobs:
       - name: Deploy to minikube
         run: |
           make deploy
-          echo ${{ secrets.MONDOO_CLIENT }} > creds.json
+          echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
           kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
           rm creds.json
+          kubectl get secret mondoo-client -n mondoo-operator -o yaml
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify Mondoo Operator kustomize manifests
         run: |
