struct field description
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -158,7 +158,7 @@ spec:
           status:
             description: MondooAuditConfigStatus defines the observed state of MondooAuditConfig
             properties:
-              mondooAuditStatusConditions:
+              conditions:
                 description: Pods store the name of the pods which are running mondoo
                   instances
                 items:
