--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Deploy to minikube
         run: |
           make deploy
-          echo ${{ secrets.MONDOO_CLIENT }} > creds.json
+          echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
           kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
           rm creds.json
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
