trial cache action
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -20,6 +20,12 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
+      - uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Start minikube
         uses: medyagh/setup-minikube@master
       - name: Try the cluster !
