--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: mondoo-operator
 spec:
   workloads:
-    enable: true
+    enable: false
   nodes:
     enable: true
   webhooks:
