--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -41,13 +41,20 @@ jobs:
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify Mondoo Operator kustomize manifests
         run: |
+          echo "Wait for Operator"
           kubectl wait --for=condition=Ready pod -l control-plane=controller-manager --namespace mondoo-operator
+          echo "display deployed pods"
+          kubectl get pods -n mondoo-operator
+          echo "check mondoo status"
           kubectl exec -q daemonset/mondoo-client --namespace mondoo-operator -- mondoo status
           kubectl exec -q deployment/mondoo-client --namespace mondoo-operator -- mondoo status 
+          echo "wait for mondoo clients to be ready"
           kubectl wait --for=condition=Ready pod -l mondoo_cr=mondoo-client --namespace mondoo-operator --timeout=30s
           kubectl exec -q daemonset/mondoo-client --namespace mondoo-operator -- mondoo status
-          kubectl exec -q deployment/mondoo-client --namespace mondoo-operator -- mondoo status 
+          kubectl exec -q deployment/mondoo-client --namespace mondoo-operator -- mondoo status
+          echo "display deployed pods"
           kubectl get pods -n mondoo-operator
+          echo "Run Mondoo Tests"
           curl -sSL http://mondoo.io/download.sh | bash
           mv mondoo /usr/local/bin/ 
           make test/deployment
