--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -44,11 +44,12 @@ jobs:
           echo "Wait for Operator"
           kubectl wait --for=condition=Ready pod -l control-plane=controller-manager --namespace mondoo-operator
           echo "display deployed pods"
-          kubectl get pods -n mondoo-operator
+          kubectl describe pods -n mondoo-operator
           echo "check mondoo status"
           kubectl exec -q daemonset/mondoo-client --namespace mondoo-operator -- mondoo status
           kubectl exec -q deployment/mondoo-client --namespace mondoo-operator -- mondoo status 
           echo "wait for mondoo clients to be ready"
+          kubectl describe pods -n mondoo-operator 
           kubectl wait --for=condition=Ready pod -l mondoo_cr=mondoo-client --namespace mondoo-operator --timeout=30s
           kubectl exec -q daemonset/mondoo-client --namespace mondoo-operator -- mondoo status
           kubectl exec -q deployment/mondoo-client --namespace mondoo-operator -- mondoo status
