--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -3,7 +3,7 @@ on:
   pull_request:
   push:
     paths-ignore:
-      - 'docs/**'
+      - "docs/**"
     branches:
       - "main"
     tags: ["v*.*.*"]
@@ -22,8 +22,11 @@ jobs:
           go-version: "${{ env.golang-version }}"
       - name: Start minikube
         uses: medyagh/setup-minikube@master
+        with:
+          memory: 4000m
       - name: Try the cluster !
-        run: kubectl get pods -A
+        run: |
+          kubectl get pods -A
       - name: Build image
         run: |
           export SHELL=/bin/bash
@@ -35,15 +38,29 @@ jobs:
           echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
           kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
           rm creds.json
-          kubectl get secret mondoo-client -n mondoo-operator -o yaml
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify Mondoo Operator kustomize manifests
         run: |
-          kubectl wait --for=condition=Ready pod -l control-plane=controller-manager --namespace mondoo-operator 
-          kubectl wait --for=condition=Ready pod -l mondoo_cr=mondoo-client --namespace mondoo-operator --timeout=300s
+          echo "Wait for Operator"
+          kubectl wait --for=condition=Ready pod -l control-plane=controller-manager --namespace mondoo-operator
+          echo "display deployed pods"
+          kubectl describe pods -n mondoo-operator
+          echo "check mondoo status"
+          kubectl exec -q daemonset/mondoo-client --namespace mondoo-operator -- mondoo status
+          kubectl exec -q deployment/mondoo-client --namespace mondoo-operator -- mondoo status 
+          echo "wait for mondoo clients to be ready"
+          kubectl describe pods -n mondoo-operator 
+          kubectl wait --for=condition=Ready pod -l mondoo_cr=mondoo-client --namespace mondoo-operator --timeout=400s
+          kubectl exec -q daemonset/mondoo-client --namespace mondoo-operator -- mondoo status
+          kubectl exec -q deployment/mondoo-client --namespace mondoo-operator -- mondoo status
+          echo "display deployed pods"
+          kubectl get pods -n mondoo-operator
+          echo "Run Mondoo Tests"
           curl -sSL http://mondoo.io/download.sh | bash
           mv mondoo /usr/local/bin/ 
           make test/deployment
+      - name: Undeploy from minikube
+        run: |
           kubectl delete -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
           make undeploy
 
