--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -37,7 +37,6 @@ jobs:
           make deploy
           echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
           kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
-          rm creds.json
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify Mondoo Operator kustomize manifests
         run: |
@@ -59,7 +58,7 @@ jobs:
           curl -sSL http://mondoo.io/download.sh | bash
           mv mondoo /usr/local/bin/ 
           make test/deployment
-      - name: Undeploy from minikube
+      - name: Verify Mondoo Operator kustomize manifests in different namespace
         run: |
           kubectl delete -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
           kubectl create ns not-mondoo-operator
@@ -70,6 +69,8 @@ jobs:
           yq -i ".metadata.namespace= \"not-mondoo-operator\"" config/samples/k8s_v1alpha1_mondooauditconfig.yaml
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
           make test/deployment-uncommon-ns
+      - name: Undeploy from minikube
+        run: |
           kubectl delete -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
           make undeploy
 
