--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -37,6 +37,7 @@ jobs:
           make deploy
           echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
           kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
+          rm creds.json
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
       - name: Verify Mondoo Operator kustomize manifests
         run: |
@@ -60,19 +61,21 @@ jobs:
           make test/deployment
       - name: Verify Mondoo Operator kustomize manifests in different namespace
         run: |
-          kubectl delete -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
           kubectl create ns not-mondoo-operator
+          echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
           kubectl create secret generic mondoo-client --namespace not-mondoo-operator --from-file=config=creds.json
+          rm creds.json
           yq ".metadata.namespace= \"not-mondoo-operator\" | .metadata.name = \"mondoo-operator-nodes\"" config/rbac/service_account_nodes.yaml | kubectl apply -f -
-          yq ".metadata.namespace= \"not-mondoo-operator\" | .metadata.name = \"mondoo-operator-workload\"" config/rbac/service_account_workloads.yaml  | kubectl apply -f -
-          kubectl get clusterrolebinding mondoo-operator-workload -o yaml | yq ".subjects[0].namespace=\"not-mondoo-operator-workload\"" | kubectl apply -f -
-          yq -i ".metadata.namespace= \"not-mondoo-operator\"" config/samples/k8s_v1alpha1_mondooauditconfig.yaml
-          kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+          yq ".metadata.namespace= \"not-mondoo-operator\" | .metadata.name = \"mondoo-operator-workload\"" config/rbac/workload_service_account.yaml  | kubectl apply -f -
+          kubectl get clusterrolebinding mondoo-operator-workload -o yaml | yq '(.subjects) = [ .subjects[] + {"kind": "ServiceAccount", "name": "mondoo-operator-workload", "namespace": "not-mondoo-operator"}]' | kubectl apply -f -
+          yq '.metadata.namespace= "not-mondoo-operator" | .spec.workloads.serviceAccount = "mondoo-operator-workload"' config/samples/k8s_v1alpha1_mondooauditconfig.yaml | kubectl apply -f -
           kubectl get pods -n not-mondoo-operator
           make test/deployment-uncommon-ns
       - name: Undeploy from minikube
         run: |
           kubectl delete -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+          yq '.metadata.namespace = "not-mondoo-operator"' config/samples/k8s_v1alpha1_mondooauditconfig.yaml | kubectl delete -f -
+          kubectl delete namespace not-mondoo-operator
           make undeploy
 
   # Added to summarize the matrix and allow easy branch protection rules setup
