--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -19,4 +19,9 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
-      - run: make test
+      - run: make test/ci
+      - uses: actions/upload-artifact@v2  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:
+          name: unit-test-results
+          path: unit-tests.xml
