--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -10,5 +10,7 @@ spec:
     enable: true
   webhooks:
     enable: false
+    certificateConfig:
+      injectionStyle: cert-manager # <--- remember to install cert-manager first
   mondooSecretRef: mondoo-client
   
