first implementation of e2e test framework in Go
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,8 @@ mondoo-operator-manifests.yaml
 bundle/*
 
 # Tests JUnit output
-tests.xml
+unit-tests.xml
+integration-tests.xml
+
+# Integration tests output
+tests/integration/_output
