--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -26,3 +26,23 @@ webhooks:
     resources:
     - pods
   sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-k8s-mondoo-com-apps
+  failurePolicy: Ignore
+  name: apps-policy.k8s.mondoo.com
+  rules:
+  - apiGroups:
+    - apps
+    apiVersions:
+    - v1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - deployments
+  sideEffects: None
