remove 'core' from the webhook names/endpoint
Now that we take core and apps group resources, the word 'core' in the name doesn't make sense.

Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/controllers/webhook-manifests.yaml
+++ b/controllers/webhook-manifests.yaml
@@ -10,9 +10,9 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-k8s-mondoo-com-core
+      path: /validate-k8s-mondoo-com
   failurePolicy: Ignore
-  name: core-policy.k8s.mondoo.com
+  name: policy.k8s.mondoo.com
   rules:
   - apiGroups:
     - ""
