:star: extend webhook watching to Deployments (#284)
* add appsv1/Deployment to watched webhook resources

Extend the existing webhook for watching core/Pods to also be the same receiver for Deployments.
Rename the files/packages to reflect that the handler now takes more than just core resources.
Generate updated manifests to include the new appsv1/Deployment resource.

Implement a custom deepEquals for determining whether an update to the existing Webhook is needed.
When an update is needed, be sure to clear out any previous annotations we may have set to cover the case where the mode changed during runtime.

Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/controllers/webhook-manifests.yaml
+++ b/controllers/webhook-manifests.yaml
@@ -10,12 +10,13 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-k8s-mondoo-com-core
+      path: /validate-k8s-mondoo-com
   failurePolicy: Ignore
-  name: core-policy.k8s.mondoo.com
+  name: policy.k8s.mondoo.com
   rules:
   - apiGroups:
     - ""
+    - apps
     apiVersions:
     - v1
     operations:
@@ -23,4 +24,5 @@ webhooks:
     - UPDATE
     resources:
     - pods
+    - deployments
   sideEffects: None
