--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -12,12 +12,13 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-k8s-mondoo-com-core
+      path: /validate-k8s-mondoo-com
   failurePolicy: Ignore
-  name: core-policy.k8s.mondoo.com
+  name: policy.k8s.mondoo.com
   rules:
   - apiGroups:
     - ""
+    - apps
     apiVersions:
     - v1
     operations:
@@ -25,4 +26,5 @@ webhooks:
     - UPDATE
     resources:
     - pods
+    - deployments
   sideEffects: None
