--- a/.github/workflows/release-helm-chart.yaml
+++ b/.github/workflows/release-helm-chart.yaml
@@ -60,7 +60,7 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: Upload helm logs artifact
-        uses: actions/upload-artifacts@v3
+        uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: helm-logs
