--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_mondooauditconfigs.yaml
+- patches/webhook_in_mondooauditconfigs.yaml
 #- patches/webhook_in_mondoooperatorconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
